kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudops-demo
  namespace: ai-cloud-labs
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx

  rules:
    - host: cloudops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudops-demo
                port:
                  number: 80
